Added react app and set migration to work

--- a/Thiago.Todo/SomonesToDoListApp.DataAccessLayer/App.config
+++ b/Thiago.Todo/SomonesToDoListApp.DataAccessLayer/App.config
@@ -7,7 +7,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="Server=localhost:1433;Database=ToDoDb;User Id=sa;Password=sA_Test_Pass;" />
+        <parameter value="Data Source=(localdb)\SQLEXPRESS;Integrated Security=True;Database=ToDoDb" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
