--- a/Thiago.Todo/SomonesToDoListApp/Web.config
+++ b/Thiago.Todo/SomonesToDoListApp/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="SomeonesToDoListConnection" connectionString="Data Source=(LocalDb)\v11.0;;Initial Catalog=SomeonesToDoListDatabase; Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="ToDoDb" connectionString="Data Source=BLACKFIRE\SQLEXPRESS;Integrated Security=True;Database=ToDoDb;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
