--- a/Thiago.Todo/ThiagoToDo.Api/packages.config
+++ b/Thiago.Todo/ThiagoToDo.Api/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net47" />
   <package id="AutoMapper" version="7.0.1" targetFramework="net47" />
   <package id="bootstrap" version="3.0.0" targetFramework="net47" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net47" />
   <package id="jQuery" version="1.10.2" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net47" />
@@ -23,26 +24,77 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.6" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Authorization" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Extensions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.JsonPatch" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Mvc.Core" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Mvc.Formatters.Json" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Routing" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.AspNetCore.WebUtilities" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net47" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net47" />
+  <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.DependencyModel" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.ObjectPool" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Options" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.PlatformAbstractions" version="1.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Primitives" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Microsoft.Net.Http.Headers" version="1.0.0" targetFramework="net47" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Cors" version="4.0.0" targetFramework="net47" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Modernizr" version="2.6.2" targetFramework="net47" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net47" />
   <package id="NLog" version="4.5.10" targetFramework="net47" />
   <package id="NLog.Config" version="4.5.10" targetFramework="net47" />
   <package id="NLog.Schema" version="4.5.10" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="Respond" version="1.2.0" targetFramework="net47" />
+  <package id="Swagger" version="1.0.0" targetFramework="net47" />
+  <package id="Swashbuckle" version="5.6.0" targetFramework="net47" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net47" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net47" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net47" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net47" />
+  <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="net47" />
+  <package id="System.ComponentModel" version="4.0.1" targetFramework="net47" />
+  <package id="System.ComponentModel.Primitives" version="4.1.0" targetFramework="net47" />
+  <package id="System.ComponentModel.TypeConverter" version="4.1.0" targetFramework="net47" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net47" />
+  <package id="System.Diagnostics.Contracts" version="4.0.1" targetFramework="net47" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net47" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net47" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net47" />
+  <package id="System.IO" version="4.1.0" targetFramework="net47" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net47" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net47" />
   <package id="System.Memory" version="4.5.5" targetFramework="net47" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net47" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net47" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net47" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net47" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net47" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net47" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net47" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net47" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="net47" />
+  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net47" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net47" />
+  <package id="System.Text.Encodings.Web" version="4.0.0" targetFramework="net47" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net47" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net47" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
   <package id="Unity" version="5.8.11" targetFramework="net47" />
