--- a/Thiago.Todo/ThiagoToDo.Api/packages.config
+++ b/Thiago.Todo/ThiagoToDo.Api/packages.config
@@ -4,6 +4,9 @@
   <package id="AutoMapper" version="7.0.1" targetFramework="net47" />
   <package id="bootstrap" version="3.0.0" targetFramework="net47" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net47" />
+  <package id="FluentValidation" version="8.6.1" targetFramework="net47" />
+  <package id="FluentValidation.Mvc5" version="8.6.1" targetFramework="net47" />
+  <package id="FluentValidation.ValidatorAttribute" version="8.6.1" targetFramework="net47" />
   <package id="jQuery" version="1.10.2" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net47" />
@@ -71,6 +74,7 @@
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net47" />
   <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="net47" />
   <package id="System.ComponentModel" version="4.0.1" targetFramework="net47" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net47" />
   <package id="System.ComponentModel.Primitives" version="4.1.0" targetFramework="net47" />
   <package id="System.ComponentModel.TypeConverter" version="4.1.0" targetFramework="net47" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net47" />
