--- a/Thiago.Todo/ThiagoToDo.Tests/packages.config
+++ b/Thiago.Todo/ThiagoToDo.Tests/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net47" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net47" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net47" />
+  <package id="FluentAssertions" version="6.9.0" targetFramework="net47" />
+  <package id="FluentValidation" version="8.6.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net47" />
@@ -13,9 +16,18 @@
   <package id="MSTest.TestAdapter" version="1.1.17" targetFramework="net47" />
   <package id="MSTest.TestFramework" version="1.1.17" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net47" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net47" />
   <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net47" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net47" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net47" />
-  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.0" targetFramework="net47" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net47" />
   <package id="Unity" version="5.8.11" targetFramework="net47" />
 </packages>
