--- a/Thiago.Todo/ThiagoToDo.Api/packages.config
+++ b/Thiago.Todo/ThiagoToDo.Api/packages.config
@@ -7,6 +7,7 @@
   <package id="FluentValidation" version="8.6.1" targetFramework="net47" />
   <package id="FluentValidation.Mvc5" version="8.6.1" targetFramework="net47" />
   <package id="FluentValidation.ValidatorAttribute" version="8.6.1" targetFramework="net47" />
+  <package id="FromHeaderAttribute" version="2.0.4" targetFramework="net47" />
   <package id="jQuery" version="1.10.2" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net47" />
@@ -60,13 +61,12 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net47" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Modernizr" version="2.6.2" targetFramework="net47" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net47" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net47" />
   <package id="NLog" version="4.5.10" targetFramework="net47" />
   <package id="NLog.Config" version="4.5.10" targetFramework="net47" />
   <package id="NLog.Schema" version="4.5.10" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
   <package id="Respond" version="1.2.0" targetFramework="net47" />
-  <package id="Swagger" version="1.0.0" targetFramework="net47" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net47" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net47" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net47" />
