--- a/Thiago.Todo/ThiagoToDo.Api/NLog.config
+++ b/Thiago.Todo/ThiagoToDo.Api/NLog.config
@@ -28,6 +28,7 @@
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
     -->
+    <target name="console" xsi:type="Console" layout="${level:uppercase=true} ${date:format=HH\:MM\:ss} ${logger} ${message}" />
   </targets>
 
   <rules>
