clean up and last fixes

--- a/Thiago.Todo/ThiagoToDo.DataAccessLayer/ThiagoToDo.DataAccessLayer.csproj
+++ b/Thiago.Todo/ThiagoToDo.DataAccessLayer/ThiagoToDo.DataAccessLayer.csproj
@@ -53,9 +53,9 @@
     <Compile Include="Abstractions\IRepository.cs" />
     <Compile Include="Context\ToDoDbContext.cs" />
     <Compile Include="Entities\ToDo.cs" />
-    <Compile Include="Migrations\201810061608049_CreateToDoList.cs" />
-    <Compile Include="Migrations\201810061608049_CreateToDoList.Designer.cs">
-      <DependentUpon>201810061608049_CreateToDoList.cs</DependentUpon>
+    <Compile Include="Migrations\202301180241112_Initial.cs" />
+    <Compile Include="Migrations\202301180241112_Initial.designer.cs">
+      <DependentUpon>202301180241112_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -66,8 +66,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201810061608049_CreateToDoList.resx">
-      <DependentUpon>201810061608049_CreateToDoList.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202301180241112_Initial.resx">
+      <DependentUpon>202301180241112_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
