--- a/Thiago.Todo/ThiagoToDo.DataAccessLayer/App.config
+++ b/Thiago.Todo/ThiagoToDo.DataAccessLayer/App.config
@@ -4,12 +4,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="ToDoDb" connectionString="Data Source=BLACKFIRE\SQLEXPRESS;Integrated Security=True;Database=ToDoDb;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="Data Source=(localdb)\SQLEXPRESS;Integrated Security=True;Database=ToDoDb" />
-      </parameters>
-    </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
